# project2_upgraded

./: Dockerfile  README.md  alembic.ini  pyproject.toml  sql_app.db
aleeembic/: env.py
aleeembic/versions/: c4a904c28b3c_upd_the_tables.py  eecc414d64fe_upd_the_tables.py
app/: advertisement_repo.py  comment_repository.py  database.py  liked_advert_repository.py  main.py  user_repo.py
